[tool.poetry]
name = "housing-price-model"
version = "0.1.0"
description = "A machine learning application that predicts house prices using a regression model trained on the Kaggle Housing Prices dataset with the Random Forest algorithm."
authors = ["Lucas Rodriguez"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
joblib = "^1.4.2"
threadpoolctl = "^3.5.0"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
